# test-etl-python-sql

./: .gitignore  README.md  base-relationnelle.py  base-staging-sqlserver.sql  base_relationnelle.py  config.yaml  joconde-anomalies.py  joconde-region.py  joconde-staging.py  joconde-transformation.py  joconde_analyse.py  json-joconde-to-parquet.py  load_joconde_json.py  load_joconde_json_to_db.py  main.py  merge.sql  pyproject.toml
